# jump-or-die

./: .gitattributes  .gitignore  CMakeLists.txt  JumpOrDie.sln  JumpOrDie.vcxproj  JumpOrDie.vcxproj.filters  Makefile  README.md  data.rar  debug.txt  dopravni_znacka(1).fbx  dopravni_znacka(3).fbx  strom.fbx  truk.fbx
data/: debug.txt  error.txt
data/models/: aut.mtl  auto.fbx  bus.fbx  dopravni_znacka(2).fbx  main_character.fbx  mch.mtl  shurb(ker).fbx  strom.mtl
data/shaders/: simple_color.fs  simple_color.vs  simple_color_phong.fs  simple_color_phong.vs  simple_texture.fs  simple_texture.vs  simple_texture_phong.fs  simple_texture_phong.vs  triangle.vs
include/glm/: glm.hpp
lib/: SDL2main.lib  SDL2maind.lib  glew32s.lib  glew32sd.lib  lodepng.lib  lodepngd.lib
src/: Car.cpp  Car.h  GameScene.cpp  GameScene.h  Main.cpp  Player.cpp  Player.h  TextGameOver.cpp  TextGameOver.h  TextPressSpace.cpp  TextPressSpace.h  TextStart.cpp  TextStart.h  TraficSign.cpp  TraficSign.h  Tree.cpp  Tree.h  main.cpp
src/Engine/: Application.cpp  Application.h  Core.cpp  Core.h  ModelLoader.cpp  ModelLoader.h
src/Engine/Graphics/: Model.cpp  Model.h  Texture.cpp  Texture.h
src/Engine/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Engine/Lighting/: Light.cpp  Light.h  LightTypes.h
src/Engine/Managers/: ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h
src/Engine/Models/: Cube.cpp  Cube.h  CubeColor.cpp  CubeColor.h  CubeTexture.cpp  CubeTexture.h  Floor.cpp  Floor.h  FloorColor.cpp  FloorColor.h  FloorTexture.cpp  FloorTexture.h  GameObject.cpp  GameObject.h  Model.cpp  Model.h  ModelObj.cpp  ModelObj.h  ModelObject.cpp  ModelObject.h  Player.cpp  Player.h  PlayerTexture.cpp  PlayerTexture.h  Triangle.cpp  Triangle.h
src/Engine/Scenes/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
src/Engine/Utils/: Basics.h  FileReader.cpp  FileReader.h  Message.cpp  Message.h  ModelLoader.cpp  ModelLoader.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
src/Images/: ImageCar.cpp  ImageFloor.cpp  ImageMch.cpp  ImageTree.cpp  Images.cpp  Images.h
src/Models/: aut.obj.cpp  gameover.obj.cpp  mch.obj.cpp  press.obj.cpp  start.obj.cpp  strom.obj.cpp
